# smart_rabo

./: CMakeLists.txt  README.md  package.xml
launch/: bcr_bot_gazebo_spawn.launch.py  display.launch.py  gazebo.launch.py  robot_launch.py
rviz/: urdf_config.rviz
scripts/: controller_node.py  keyBoard_node.py  maze_solve.py  odom_rviz.py  odometry_node.py
src/: hamester_info.cpp
urdf/: common_properties.xacro  mobile_base.xacro  robot.urdf.xacro  ultrasonic.xacro
worlds/: maze.world  test_world.world
